--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll",
+    "test:debug": "ndb jest",
     "coverage": "npx jest --coverage"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "@types/jest": "^26.0.15",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "ndb": "^1.1.5",
     "prettier": "^2.2.1"
   },
   "dependencies": {
